fixed minor errors

--- a/www/index.html
+++ b/www/index.html
@@ -82,6 +82,7 @@
     <br><br>
     <center>
       <div id='taxi_number' style='color:white;'></div>
+    </center>
   </div>
 
 
@@ -134,7 +135,7 @@
      href='Javascript: call_taxi();'><img src='resources/gamodzaxeba.svg' style='width:210px; height:100px;'></a>
 
 
-  <a href='Javascript: setme();' style='position:fixed; top:60px; right:leftpx; margin:5px; z-index:252; '><img
+  <a href='Javascript: setme();' style='position:fixed; top:60px; right:5px; margin:5px; z-index:252; '><img
           id='cbut' src='resources/center.svg' style='width:50px; height:50px;'></a>
   <!--<a href='Javascript: show_settings();' style='position:fixed; top:55px; right:5px; margin:5px; z-index:252;' ><img src='settings.png'></a>-->
 
@@ -152,7 +153,7 @@
           <Td>
             <input type='radio' name='startp' id='startp_1' onchange='change_start();' checked> მიმდიანრე
             ლოკაცია &nbsp;&nbsp;
-            <input type='radio' name='startp' id='startp_1' onchange='change_start();'> მითითება რუკაზე
+            <input type='radio' name='startp' id='startp_2' onchange='change_start();'> მითითება რუკაზე
           </td>
         </tr>
         <Tr>
@@ -160,7 +161,7 @@
           <Td>
             <input type='radio' name='endp' id='endp_1' onchange='change_start();' checked> ღია &nbsp;&nbsp;
             <input
-                    type='radio' name='endp' id='endp_1' onchange='change_start();'> მითითება რუკაზე
+                    type='radio' name='endp' id='endp_2' onchange='change_start();'> მითითება რუკაზე
           </td>
         </tr>
 
