--- a/www/index.html
+++ b/www/index.html
@@ -11,7 +11,7 @@
     <title>Prius Taxi</title>
 
     <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
-    <script src="js/bootbox.min.js"></script>
+    <script src="js/bootbox.js"></script>
     <script type="text/javascript" charset="utf-8" src="js/func.js"></script>
     <script type="text/javascript" charset="utf-8" src="js/init.js"></script>
     <script type="text/javascript" charset="utf-8" src="js/io.js"></script>
