now uses cordova prompt instead of native js prompt

--- a/www/index.html
+++ b/www/index.html
@@ -11,7 +11,9 @@
     <title>Prius Taxi</title>
 
     <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
-    <script src="js/bootbox.js"></script>
+    <script src="js/jquery-3.2.1.min.js"></script>
+    <script src="js/popper.js"></script>
+    <script src="js/bootstrap.min.js"></script>
     <script type="text/javascript" charset="utf-8" src="js/func.js"></script>
     <script type="text/javascript" charset="utf-8" src="js/init.js"></script>
     <script type="text/javascript" charset="utf-8" src="js/io.js"></script>
