now uses cordova prompt instead of native js prompt

--- a/www/index.html
+++ b/www/index.html
@@ -67,7 +67,7 @@
     <div id='charcho' style='position:fixed; left:0px; top:50px; width:365px; height:600px;  z-index:1;'>
         <div id='mainw' style='position:absolute; left:0px; top:0px; width:600px; height:600px; '>
             <div id="gmap"
-                 style='position:absolute; left:0px; top:0px; height:600px; width:365px; display:block;'></div>
+                 style='position:absolute; left:0px; top:0px; height:500px; width:365px; display:block;'></div>
 
         </div>
     </div>
@@ -152,20 +152,19 @@
         <div id='certilebi' name='certilebi'
              style=' position:fixed; bottom:0px; left:0px; width:100%; background-color:#ffce00;'>
             <table width=100%>
-                <Tr>
+                <tr>
                     <td>დაწყება:</td>
-                    <Td>
-                        <input type='radio' name='startp' id='startp_1' onchange='change_start();' checked> მიმდიანრე
+                    <td>
+                        <input type='radio' name='startp' id='startp_1' onchange='change_start();' checked> მიმდინარე
                         ლოკაცია &nbsp;&nbsp;
                         <input type='radio' name='startp' id='startp_2' onchange='change_start();'> მითითება რუკაზე
                     </td>
                 </tr>
-                <Tr>
+                <tr>
                     <td>დასრულება:</td>
-                    <Td>
+                    <td>
                         <input type='radio' name='endp' id='endp_1' onchange='change_start();' checked> ღია &nbsp;&nbsp;
-                        <input
-                                type='radio' name='endp' id='endp_2' onchange='change_start();'> მითითება რუკაზე
+                        <input type='radio' name='endp' id='endp_2' onchange='change_start();'> მითითება რუკაზე
                     </td>
                 </tr>
 
