--- a/www/index.html
+++ b/www/index.html
@@ -72,9 +72,9 @@
         </div>
     </div>
     <!--key=AIzaSyAFY47FE__z9AvRLBoYG0T2XeOTiHdwzOQ-->
-
+    <!--key=AIzaSyAMaeW61XOXEKHCrzM6J5nulpyZpeeTb4k-->
     <script async defer
-            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAMaeW61XOXEKHCrzM6J5nulpyZpeeTb4k&callback=initMap&language=ka&libraries=places"></script>
+            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAFY47FE__z9AvRLBoYG0T2XeOTiHdwzOQ&callback=initMap&language=ka&libraries=places"></script>
 
     <div id='arrived_screen'
          style='display:none; position:fixed; top:50px; left:0px;  width:400px; height:620px; z-index:300; background-color:#e3b202; color:white; '>
