--- a/www/index.html
+++ b/www/index.html
@@ -42,7 +42,10 @@
 
 
 <div id='fanjara' style='position:relative; overflow:hidden; width:400px; height:600px;'>
-
+    <div style="width: 100%; position:fixed; top:60px;z-index:272">
+        <span id='topMessage' style="color:black;  margin:5px; ">
+            აირჩიეთ საწყისი ლოკაცია</span>
+    </div>
     <div style='position:fixed; left:0px; top:0px; width:100%; height:50px; background-color:white; z-index:211; '>
         <a style='float:left; margin-top:7px; margin-left: 7px;' href='Javascript: show_settings();'><img
                 src='resources/but_info.png'></a>
@@ -140,8 +143,8 @@
        href='Javascript: call_taxi();'><img src='resources/gamodzaxeba.svg' style='width:210px; height:100px;'></a>
 
 
-    <a href='Javascript: setme();' style='position:fixed; top:60px; right:5px; margin:5px; z-index:252; '><img
-            id='cbut' src='resources/center.svg' style='width:50px; height:50px;'></a>
+    <a href='Javascript: setme();' style='position:fixed; top:60px; right:5px; margin:5px; z-index:252; '>
+        <img id='cbut' src='resources/center.svg' style='width:50px; height:50px;'></a>
     <!--<a href='Javascript: show_settings();' style='position:fixed; top:55px; right:5px; margin:5px; z-index:252;' ><img src='settings.png'></a>-->
 
 
