--- a/www/index.html
+++ b/www/index.html
@@ -42,7 +42,7 @@
 
 
 <div id='fanjara' style='position:relative; overflow:hidden; width:400px; height:600px;'>
-    <div style="width: 100%; position:fixed; top:60px;z-index:272">
+    <div style="width: 100%; position:fixed; top:45px;z-index:272; text-align: center;">
         <span id='topMessage' style="color:black;  margin:5px; ">
             აირჩიეთ საწყისი ლოკაცია</span>
     </div>
@@ -156,19 +156,18 @@
         <div id='certilebi' name='certilebi'
              style=' position:fixed; bottom:0px; left:0px; width:100%; background-color:#ffce00;'>
             <table width=100%>
-                <tr>
-                    <td>დაწყება:</td>
-                    <td>
-                        <input type='radio' name='startp' id='startp_1' onchange='change_start();' checked> მიმდინარე
-                        ლოკაცია &nbsp;&nbsp;
-                        <input type='radio' name='startp' id='startp_2' onchange='change_start();'> მითითება რუკაზე
-                    </td>
-                </tr>
+                <!--<tr>-->
+                <!--<td>დაწყება:</td>-->
+                <!--<td>-->
+                <!--<input type='radio' name='startp' id='startp_1' onchange='change_start();' checked> მიმდინარე-->
+                <!--ლოკაცია &nbsp;&nbsp;-->
+                <!--<input type='radio' name='startp' id='startp_2' onchange='change_start();'> მითითება რუკაზე-->
+                <!--</td>-->
+                <!--</tr>-->
                 <tr>
                     <td>დასრულება:</td>
                     <td>
-                        <input type='radio' name='endp' id='endp_1' onchange='change_start();' checked> ღია &nbsp;&nbsp;
-                        <input type='radio' name='endp' id='endp_2' onchange='change_start();'> მითითება რუკაზე
+                        <button>თავიდან არჩევა</button>
                     </td>
                 </tr>
 
