--- a/www/index.html
+++ b/www/index.html
@@ -9,7 +9,7 @@
 
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title>Prius Taxi</title>
-
+    <link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
     <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
     <script src="js/jquery-3.2.1.min.js"></script>
     <script src="js/popper.js"></script>
@@ -167,7 +167,7 @@
                 <tr>
                     <td>დასრულება:</td>
                     <td>
-                        <button>თავიდან არჩევა</button>
+                        <button class='btn'>თავიდან არჩევა</button>
                     </td>
                 </tr>
 
