working on routes

--- a/www/index.html
+++ b/www/index.html
@@ -167,7 +167,7 @@
                 <tr>
                     <td>დასრულება:</td>
                     <td>
-                        <button class='btn'>თავიდან არჩევა</button>
+                        <button class='btn' id="switchButton" onclick="switchState()">თავიდან არჩევა</button>
                     </td>
                 </tr>
 
