--- a/www/index.html
+++ b/www/index.html
@@ -76,7 +76,6 @@
             მისამართის ძებნა
           </div>
 
-
           <div id="pac-container">
             <input id="pac-input" type="text" placeholder="შეიყვანეთ მისამართი">
           </div>
@@ -158,7 +157,8 @@
 
     <a href='Javascript: setme();' style='position:fixed; top:60px; right:5px; margin:5px; z-index:252; '>
       <img id='cbut' src='resources/center.svg' style='width:50px; height:50px;'></a>
-    <!--<a href='Javascript: show_settings();' style='position:fixed; top:55px; right:5px; margin:5px; z-index:252;' ><img src='settings.png'></a>-->
+    <a href='Javascript: show_settings();' style='position:fixed; top:55px; right:5px; margin:5px; z-index:252;'><img
+            src='resources/settings.png'></a>
 
 
     <div id="bottom_menu"
