--- a/www/index.html
+++ b/www/index.html
@@ -43,9 +43,9 @@
 
 
 <div id='fanjara' style='position:relative; overflow:hidden; width:400px; height:600px;'>
-  <div style="width: 100%; position:fixed; top:45px;z-index:272; text-align: center;">
+ <!-- <div style="width: 100%; position:fixed; top:45px;z-index:272; text-align: center;">
         <span id='topMessage' style="color:black;  margin:5px; ">აირჩიეთ საწყისი ლოკაცია</span>
-  </div>
+  </div>-->
   <div style='position:fixed; left:0px; top:0px; width:100%; height:50px; background-color:white; z-index:211; '>
     <a style='float:left; margin-top:7px; margin-left: 7px;' href='Javascript: show_settings();'><img
             src='resources/but_info.png'></a>
