--- a/www/index.html
+++ b/www/index.html
@@ -80,8 +80,7 @@
 
         </div>
       </div>
-      <div id="gmap"
-           style='position:absolute; left:0px; top:0px; height:600px; width:365px; display:block;'></div>
+      <div id="gmap"  style='position:absolute; left:0px; top:0px; height:600px; width:365px; display:block;'></div>
 
     </div>
     <!--key=AIzaSyAFY47FE__z9AvRLBoYG0T2XeOTiHdwzOQ-->
