--- a/www/index.html
+++ b/www/index.html
@@ -75,7 +75,7 @@
         
 
           <div id="pac-container">
-            <input id="pac-input" type="text" placeholder="მისამართის ძებნა">
+            <input id="pac-input" type="text" placeholder="მისამართის ძებნა" style='width:100%;'>
           </div>
 
         </div>
