--- a/www/index.html
+++ b/www/index.html
@@ -174,14 +174,13 @@
           <!--<input type='radio' name='startp' id='startp_2' onchange='change_start();'> მითითება რუკაზე-->
           <!--</td>-->
           <!--</tr>-->
-         <!-- <tr>
-            <td>დასრულება:</td>
-            <td>
-              <button class='btn' id="switchButton" onclick="switchState()">თავიდან არჩევა</button>
+          <tr bgcolor=black>
+            <td bgcolor=black></td>
+            <td bgcolor=black>&nbsp;
+             <!-- <button class='btn' id="switchButton" onclick="switchState()">თავიდან არჩევა</button>-->
             </td>
-          </tr>-->
-
-        </table>
+          </tr>
+		 </table>
 
 
       </div>
