--- a/www/index.html
+++ b/www/index.html
@@ -57,8 +57,9 @@
         
 
           <div id="pac-container">
-            <input id="pac-input" type="text" placeholder="საწყისი მისამართი" style='width:300px;' onfocus='setState(0);'><br>
-			<input id="pac-input2" type="text" placeholder="დანიშნულების მისამართი" style='width:300px;' onfocus='setState(1);'>
+            <table><Tr><td>დაწყება:</td><td> <input id="pac-input" type="text" placeholder="საწყისი მისამართი"  onfocus='setState(0);'></td></tr>
+			<Tr><td>დასრულება:</td><td> <input id="pac-input2" type="text" placeholder="დანიშნულების მისამართი"  onfocus='setState(1);'></td></tr>
+			</table>
           </div>
 
         </div>
