--- a/www/index.html
+++ b/www/index.html
@@ -52,18 +52,19 @@
     <!--	<div id='infodiv' style='float:right;  color:Black; display:none;'></div>-->
     <a style='float:right; margin-top:7px; margin-right: 7px; ' href='Javascript: show_settings();' id='regbut'><img
             src='resources/but_register.png'></a>
-<div class="pac-card" id="pac-card">
-        <div>
+<!--<div class="pac-card" id="pac-card">
+        <div>-->
         
 
-          <div id="pac-container">
-            <table><Tr><td>დაწყება:</td><td> <input id="pac-input" type="text" placeholder="საწყისი მისამართი"  onfocus='setState(0);'></td></tr>
-			<Tr><td>დასრულება:</td><td> <input id="pac-input2" type="text" placeholder="დანიშნულების მისამართი"  onfocus='setState(1);'></td></tr>
-			</table>
-          </div>
+        <!--  <div id="pac-container"> -->
+            <table><Tr><td>დაწყება:</td><td>დასრულება:</td></tr>
 
-        </div>
-      </div>
+			<Tr><td><input id="pac-input" type="text" placeholder="საწყისი მისამართი"  onfocus='setState(0);'></td><td> <input id="pac-input2" type="text" placeholder="დანიშნულების მისამართი"  onfocus='setState(1);'></td></tr>
+			</table>
+     <!--     </div>-->
+
+       <!-- </div>
+      </div>-->
 
   </div>
   <!-- MAIN MAP -->
