--- a/www/index.html
+++ b/www/index.html
@@ -57,7 +57,7 @@
         
 
         <!--  <div id="pac-container"> -->
-            <table><Tr><td>დაწყება:</td><td>დასრულება:</td></tr>
+            <table><Tr><td style='color:Black;'>დაწყება:</td><td style='color:Black;'>დასრულება:</td></tr>
 
 			<Tr><td><input id="pac-input" type="text" placeholder="საწყისი მისამართი"  onfocus='setState(0);'></td><td> <input id="pac-input2" type="text" placeholder="დანიშნულების მისამართი"  onfocus='setState(1);'></td></tr>
 			</table>
