--- a/www/index.html
+++ b/www/index.html
@@ -59,7 +59,8 @@
         <!--  <div id="pac-container"> -->
             <table><Tr><td style='color:Black;'>დაწყება:</td><td style='color:Black;'>დასრულება:</td></tr>
 
-			<Tr><td><input id="pac-input" type="text" placeholder="საწყისი მისამართი"  onfocus='setState(0);'></td><td> <input id="pac-input2" type="text" placeholder="დანიშნულების მისამართი"  onfocus='setState(1);'></td></tr>
+			<Tr><td><input id="pac-input" type="text" placeholder="საწყისი მისამართი"  onfocus='setState(0);'></td>
+			<td> <input id="pac-input2" type="text" placeholder="დანიშნულების მისამართი"  onfocus='setState(1);'></td></tr>
 			</table>
      <!--     </div>-->
 
