--- a/www/index.html
+++ b/www/index.html
@@ -13,7 +13,7 @@
   <link href="css/main.css" rel="stylesheet">
   <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
   <script src="js/jquery-3.2.1.min.js"></script>
-  <script src="js/popper.js"></script>
+<!--  <script src="js/popper.js"></script>-->
   <script src="js/bootstrap.min.js"></script>
   <script type="text/javascript" charset="utf-8" src="js/func.js"></script>
   <script type="text/javascript" charset="utf-8" src="js/init.js"></script>
@@ -59,8 +59,8 @@
         <!--  <div id="pac-container"> -->
             <table><Tr><td style='color:Black;'>დაწყება:</td><td style='color:Black;'>დასრულება:</td></tr>
 
-			<Tr><td><input id="pac-input" type="text" placeholder="საწყისი მისამართი"  onfocus='setState(0);'></td>
-			<td> <input id="pac-input2" type="text" placeholder="დანიშნულების მისამართი"  onfocus='setState(1);'></td></tr>
+			<Tr><td><input id="pac-input" type="text" placeholder="საწყისი მისამართი"  onfocus='setState(0);' onclick='this.select();'></td>
+			<td> <input id="pac-input2" type="text" placeholder="დანიშნულების მისამართი"  onfocus='setState(1);' onclick='this.select();'></td></tr>
 			</table>
      <!--     </div>-->
 
