--- a/www/index.html
+++ b/www/index.html
@@ -62,6 +62,7 @@
 			<Tr><td><input id="pac-input" type="text" placeholder="საწყისი მისამართი"  onfocus='setState(0);' onclick='this.select();'></td>
 			<td> <input id="pac-input2" type="text" placeholder="დანიშნულების მისამართი"  onfocus='setState(1);' onclick='this.select();'></td></tr>
 			</table>
+			<div id='dirinfo' style='color:black;'></div>
      <!--     </div>-->
 
        <!-- </div>
