--- a/www/index.html
+++ b/www/index.html
@@ -63,6 +63,7 @@
 			<td> <input id="pac-input2" type="text" placeholder="დანიშნულების მისამართი"  onfocus='setState(1);' onclick='this.select();'></td></tr>
 			</table>
 			<div id='dirinfo' style='color:black;'></div>
+			<div id='driver_info' style='color:black;'></div>
      <!--     </div>-->
 
        <!-- </div>
