--- a/www/index.html
+++ b/www/index.html
@@ -125,7 +125,7 @@
             <tr><td onmouseup='hide_profile();' onclick="hide_profile();" colspan=3></td></tr>
             <tr><td onmouseup='hide_profile();' onclick="hide_profile();"></td>
             <td>
-                <img src='http://developer.design.ge/geotaxi/taxicar.jpg' width=100px><br>
+                <img src='http://taxiprius.com.ge/taxicar.jpg' width=100px><br>
                 &#4315;&#4304;&#4316;&#4325;&#4304;&#4316;&#4312;&#4321;&#32;&#4315;&#4317;&#4307;&#4308;&#4314;&#4312;: Mercedes<br>
                 მანქანის ფერი: მწვანე<br>
                 მძღოლი: ანდრო შველიძე<br>
@@ -236,7 +236,7 @@
           </tr>
         </table>
         <Br><br>
-        <a href='#' onclick="window.open('http://developer.design.ge/prius/reg.php', '_system');"
+        <a href='#' onclick="window.open('http://taxiprius.com.ge/user_reg.php', '_system');"
            style='background-color:white; border:1px solid gray; display:block; width:150px; color:black; padding:5px;'>რეგისტრაცია</a>
       </div>
 
