--- a/www/index.html
+++ b/www/index.html
@@ -46,7 +46,7 @@
  <!-- <div style="width: 100%; position:fixed; top:45px;z-index:272; text-align: center;">
         <span id='topMessage' style="color:black;  margin:5px; ">აირჩიეთ საწყისი ლოკაცია</span>
   </div>-->
-  <div style='position:fixed; left:0px; top:0px; width:100%; height:100px; background-color:white; z-index:211; '>
+  <div style='position:fixed; left:0px; top:0px; width:100%; height:90px; background-color:white; z-index:211; '>
     <a style='float:left; margin-top:7px; margin-left: 7px;' href='Javascript: show_settings();'><img
             src='resources/but_info.png'></a>
     <!--	<div id='infodiv' style='float:right;  color:Black; display:none;'></div>-->
@@ -57,13 +57,12 @@
         
 
         <!--  <div id="pac-container"> -->
-            <table><Tr><td style='color:Black;'>დაწყება:</td><td style='color:Black;'>დასრულება:</td></tr>
+            <table width=100%><Tr><td style='color:Black;' align=center>დაწყება</td><td style='color:Black;' align=center>დასრულება</td></tr>
 
-			<Tr><td><input id="pac-input" type="text" placeholder="საწყისი მისამართი"  onfocus='setState(0);' onclick='this.select();'></td>
-			<td> <input id="pac-input2" type="text" placeholder="დანიშნულების მისამართი"  onfocus='setState(1);' onclick='this.select();'></td></tr>
+			<Tr><td><input id="pac-input" type="text" placeholder="საწყისი მისამართი"  onfocus='setState(0);' onclick='this.select();' style='width:170px;'></td>
+			<td> <input id="pac-input2" type="text" placeholder="დანიშნულების მისამართი"  onfocus='setState(1);' onclick='this.select();' style='width:170px;'></td></tr>
 			</table>
-			<div id='dirinfo' style='color:black;'></div>
-			<div id='driver_info' style='color:black;'></div>
+		
      <!--     </div>-->
 
        <!-- </div>
@@ -120,75 +119,25 @@
     </div>
 
 
-    <!--<div id='profile_div' style='position:absolute; left:0px; top:0px; width:600px; height:600px; z-index:252; background:URL(semitrans.png); visibility:hidden;'>
-        <table width=100% cellspacing=0 cellpadding=0 height=100% border=1>
-            <tr><td onmouseup='hide_profile();' onclick="hide_profile();" colspan=3></td></tr>
-            <tr><td onmouseup='hide_profile();' onclick="hide_profile();"></td>
-            <td>
-                <img src='http://taxiprius.com.ge/taxicar.jpg' width=100px><br>
-                &#4315;&#4304;&#4316;&#4325;&#4304;&#4316;&#4312;&#4321;&#32;&#4315;&#4317;&#4307;&#4308;&#4314;&#4312;: Mercedes<br>
-                მანქანის ფერი: მწვანე<br>
-                მძღოლი: ანდრო შველიძე<br>
-                <a href='Javascript: call_taxi()'>გამოძახება</a>
-            </td>
-            <td onmouseup='hide_profile();' onclick="hide_profile();"></td></tr>
-            <tr><td onmouseup='hide_profile();' onclick="hide_profile();" colspan=3></td></tr>
-            </table>
-    </div>-->
-
-    <!--<div id="geopos_short" style='width:100%; position:absolute; left:0px; top:50px; z-index:220; background-color:black; filter: alpha(opacity=50);
-        -moz-opacity: 0.5; -khtml-opacity: 0.5;  opacity: 0.5;'>Finding geolocation...</div>-->
-
-
-   <!-- <div id='chat_div' style='position:fixed; right:10px; bottom:50px; z-index:254;  '>
-      <a href='Javascript: chat_click();' style='position:absolute; top:-25px; right:0px;'><img
-              src='resources/chat.svg'
-              style='width:50px; height:50px;'></a>
-      <div id='chat_window' style='display:inline; width:98%; height:200px; background-color:white; display:none;'>
-        <div id='chat_txt'
-             style='width:99%; border:1px solid gray; height:150px; overflow:auto; background-color:white; color:#e3b202; border-radius:5px;'></div>
-        <input type='text' size=30 id='chat_send_text' style='z-index:305; text-size:16px;'
-               onkeyup='chat_key(event);'>
-        <!--<input type='button' value='send' onclick='chat_send();' style='z-index:305;'>
-      </div>
-    </div>-->
+	<div id='dirinfo' style='color:black; background-color:white; padding:10px;'></div>
+	<div id='driver_info' style='color:black;background-color:white; padding:10px;'></div>
 
     <a id='call_but' style='position:fixed; bottom:40px; left:80px; height:100px; width:210px; z-index:252;  '
        href='Javascript: call_taxi();'><img src='resources/gamodzaxeba.svg' style='width:210px; height:100px;'></a>
 
 
-    <a href='Javascript: setme();' style='position:fixed; top:60px; right:5px; margin:5px; z-index:252; '>
+    <a href='Javascript: setme();' style='position:fixed; bottom:60px; right:5px; margin:5px; z-index:252; '>
       <img id='cbut' src='resources/center.svg' style='width:50px; height:50px;'></a>
     <!--<a href='Javascript: show_settings();' style='position:fixed; top:55px; right:5px; margin:5px; z-index:252;'><img-->
     <!--src='resources/settings.png'></a>-->
 
 
     <div id="bottom_menu"
-         style=' width:100%; position:fixed; bottom:0px; left:0px; height:90px; z-index:251; background-color:#3f3f3f; filter: alpha(opacity=90);	-moz-opacity: 0.9; -khtml-opacity: 0.9;  opacity: 0.9;   '>
-      <img src='resources/phone.png'>
+         style=' width:100%; position:fixed; bottom:0px; left:0px; height:41px; z-index:251; background-color:#ffce00;   '><!--filter: alpha(opacity=90);	-moz-opacity: 0.9; -khtml-opacity: 0.9;  opacity: 0.9; -->
+    <!--  <img src='resources/phone.png'>-->
       <div id='info_text' name='info_text' style=' float:right; color:white; padding:5px; '></div>
 
-      <div id='certilebi' name='certilebi'
-           style=' position:fixed; bottom:0px; left:0px; width:100%; background-color:#ffce00;'>
-        <table width=100%>
-          <!--<tr>-->
-          <!--<td>დაწყება:</td>-->
-          <!--<td>-->
-          <!--<input type='radio' name='startp' id='startp_1' onchange='change_start();' checked> მიმდინარე-->
-          <!--ლოკაცია &nbsp;&nbsp;-->
-          <!--<input type='radio' name='startp' id='startp_2' onchange='change_start();'> მითითება რუკაზე-->
-          <!--</td>-->
-          <!--</tr>-->
-          <tr bgcolor=black>
-            <td bgcolor=black></td>
-            <td bgcolor=black>&nbsp;
-             <!-- <button class='btn' id="switchButton" onclick="switchState()">თავიდან არჩევა</button>-->
-            </td>
-          </tr>
-		 </table>
-
-
-      </div>
+    
     </div>
 
   </div>
