--- a/www/index.html
+++ b/www/index.html
@@ -46,21 +46,21 @@
  <!-- <div style="width: 100%; position:fixed; top:45px;z-index:272; text-align: center;">
         <span id='topMessage' style="color:black;  margin:5px; ">აირჩიეთ საწყისი ლოკაცია</span>
   </div>-->
-  <div style='position:fixed; left:0px; top:0px; width:100%; height:90px; background-color:white; z-index:211; '>
+  <div style='position:fixed; left:0px; top:0px; width:100%; height:80px; background-color:#ffce00; z-index:211; '>
     <a style='float:left; margin-top:7px; margin-left: 7px;' href='Javascript: show_settings();'><img
             src='resources/but_info.png'></a>
     <!--	<div id='infodiv' style='float:right;  color:Black; display:none;'></div>-->
-    <a style='float:right; margin-top:7px; margin-right: 7px; ' href='Javascript: show_settings();' id='regbut'><img
-            src='resources/but_register.png'></a>
+    <!--<a style='float:right; margin-top:7px; margin-right: 7px; ' href='Javascript: show_settings();' id='regbut'><img
+            src='resources/but_register.png'></a>-->
 <!--<div class="pac-card" id="pac-card">
         <div>-->
         
 
         <!--  <div id="pac-container"> -->
-            <table width=100%><Tr><td style='color:Black;' align=center>დაწყება</td><td style='color:Black;' align=center>დასრულება</td></tr>
+            <table width=100%><Tr><td style='color:Black;' align=center><b>დაწყება</b></td><td style='color:Black;' align=center><b>დასრულება</b></td></tr>
 
-			<Tr><td><input id="pac-input" type="text" placeholder="საწყისი მისამართი"  onfocus='setState(0);' onclick='this.select();' style='width:170px;'></td>
-			<td> <input id="pac-input2" type="text" placeholder="დანიშნულების მისამართი"  onfocus='setState(1);' onclick='this.select();' style='width:170px;'></td></tr>
+			<Tr><td><input id="pac-input" type="text" placeholder="საწყისი მისამართი"  onfocus='setState(0);' onclick='this.select();' style='width:174px;'></td>
+			<td> <input id="pac-input2" type="text" placeholder="დანიშნულების მისამართი"  onfocus='setState(1);' onclick='this.select();' style='width:174px;'></td></tr>
 			</table>
 		
      <!--     </div>-->
@@ -122,7 +122,7 @@
 	<div id='dirinfo' style='color:black; background-color:white; padding:10px;'></div>
 	<div id='driver_info' style='color:black;background-color:white; padding:10px;'></div>
 
-    <a id='call_but' style='position:fixed; bottom:40px; left:80px; height:100px; width:210px; z-index:252;  '
+    <a id='call_but' style='position:fixed; bottom:30px; left:80px; height:100px; width:210px; z-index:252;  '
        href='Javascript: call_taxi();'><img src='resources/gamodzaxeba.svg' style='width:210px; height:100px;'></a>
 
 
@@ -133,7 +133,7 @@
 
 
     <div id="bottom_menu"
-         style=' width:100%; position:fixed; bottom:0px; left:0px; height:41px; z-index:251; background-color:#ffce00;   '><!--filter: alpha(opacity=90);	-moz-opacity: 0.9; -khtml-opacity: 0.9;  opacity: 0.9; -->
+         style=' width:100%; position:fixed; bottom:0px; left:0px; height:31px; z-index:251; background-color:#ffce00;   '><!--filter: alpha(opacity=90);	-moz-opacity: 0.9; -khtml-opacity: 0.9;  opacity: 0.9; -->
     <!--  <img src='resources/phone.png'>-->
       <div id='info_text' name='info_text' style=' float:right; color:white; padding:5px; '></div>
 
