--- a/www/index.html
+++ b/www/index.html
@@ -58,8 +58,8 @@
         <!--  <div id="pac-container"> -->
             <table width=100%><Tr><td style='color:Black;' align=center><b>დაწყება</b></td><td style='color:Black;' align=center><b>დასრულება</b></td></tr>
 
-			<Tr><td><input id="pac-input" type="text" placeholder="საწყისი მისამართი"  onfocus='setState(0);' onclick='this.select();' style='width:174px;'></td>
-			<td> <input id="pac-input2" type="text" placeholder="დანიშნულების მისამართი"  onfocus='setState(1);' onclick='this.select();' style='width:174px;'></td></tr>
+			<Tr><td><input id="pac-input" type="text" placeholder="საწყისი მისამართი"  onfocus='setState(0);' onclick='this.select();' style='width:174px; background-color:#32e875; border:1px solid #13ae48;  border-radius:3px;'></td>
+			<td> <input id="pac-input2" type="text" placeholder="დანიშნულების მისამართი"  onfocus='setState(1);' onclick='this.select();' style='width:174px; background-color:#e8b427;  border:1px solid #ecac00; border-radius:3px;'></td></tr>
 			</table>
 		
      <!--     </div>-->
